k8s/traefik/ingressroute-dev.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dev-ingress-route
  namespace: dev
spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: Host(`dev.servicefoundry.ca`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: dev-web-service
          port: 80

  tls:
    secretName: "dev-ca-tls"
